--- a/src/sass/assets/_test.sass
+++ b/src/sass/assets/_test.sass
@@ -8,3 +8,11 @@ $font-size: 13px
 
 .box
 	+border-radius(10px)
+
+
+body
+	font-size: $font-size
+
+	.testClass
+		font-size: $font-size*1.5
+		user-select: none
