--- a/src/sass/sass.sass
+++ b/src/sass/sass.sass
@@ -1,9 +1,2 @@
-@import "test.sass"
-
-
-body
-	font-size: $font-size
-
-	.testClass
-		font-size: $font-size*1.5
-		user-select: none
+@import "assets/test.sass"
+@import "assets/animation.scss"
